Readjust search container width to prevent overlap with map on smaller screens

--- a/app/assets/stylesheets/listings_show.scss
+++ b/app/assets/stylesheets/listings_show.scss
@@ -252,6 +252,7 @@
 .show-page-user-profile {
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-direction: column;
 }
 
